--- a/portal/templates/recruiter/job.html
+++ b/portal/templates/recruiter/job.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jobs Available</title>
+    <title>Job</title>
 </head>
 <body>
-    Hello jobs
+    show applications for the current job
 </body>
 </html>
