--- a/portal/templates/index.html
+++ b/portal/templates/index.html
@@ -4,47 +4,70 @@
 {% endblock %}
 
 {% block body %}
+
+<div id="nav-buttons" style="display: flex;">
+  <div id="total-pages">Total Pages = 3</div>
+  <button id="prev-btn" class="mx-3 h-10 px-6 font-semibold rounded-md bg-black text-white"> Previous </button>
+  <button id="next-btn" class="h-10 px-6 font-semibold rounded-md bg-black text-white"> Next </button>
+</div>
+
 <div id="jobs">
 </div>
 
 
-  <!-- Main modal -->
-  <div id="applicantDetail1Modal" tabindex="-1" aria-hidden="true" class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 w-full md:inset-0 h-modal md:h-full">
-    <div class="relative p-4 w-full max-w-2xl h-full md:h-auto">
-        <!-- Modal content -->
-        <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
-            <!-- Modal header -->
-            <div class="flex justify-between items-start p-4 rounded-t border-b dark:border-gray-600">
-                <h3 class="text-xl font-semibold text-gray-900 dark:text-white">
-                    Applicant Details
-                </h3>
-                <button type="button" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center dark:hover:bg-gray-600 dark:hover:text-white" id="close-app1-modal">
-                    <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
-                    <span class="sr-only">Close modal</span>
-                </button>
-            </div>
-            <!-- Modal body -->
-            <div class="p-6 space-y-6">
-                <p class="text-base leading-relaxed text-gray-500 dark:text-gray-400" id="app-detail-1">
-                </p>
-            </div>
-        </div>
+<!-- Main modal -->
+<div id="applicantDetail1Modal" tabindex="-1" aria-hidden="true"
+  class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 w-full md:inset-0 h-modal md:h-full">
+  <div class="relative p-4 w-full max-w-2xl h-full md:h-auto">
+    <!-- Modal content -->
+    <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
+      <!-- Modal header -->
+      <div class="flex justify-between items-start p-4 rounded-t border-b dark:border-gray-600">
+        <h3 class="text-xl font-semibold text-gray-900 dark:text-white">
+          Applicant Details
+        </h3>
+        <button type="button"
+          class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center dark:hover:bg-gray-600 dark:hover:text-white"
+          id="close-app1-modal">
+          <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
+            xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd"
+              d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+              clip-rule="evenodd"></path>
+          </svg>
+          <span class="sr-only">Close modal</span>
+        </button>
+      </div>
+      <!-- Modal body -->
+      <div class="p-6 space-y-6">
+        <p class="text-base leading-relaxed text-gray-500 dark:text-gray-400" id="app-detail-1">
+        </p>
+      </div>
     </div>
   </div>
+</div>
 
 <script>
 
   const jobsEle = document.getElementById('jobs');
+  let prev = "";
+  let next = "";
 
-  let jobsEleString = "";
-  fetch('/api/recruiter').then(res => res.json())
-  .then(data => {
-      // console.log("DATA :" + data);
+  function getApplicants(url=`/api/recruiter/?limit=${3}&offset=${0}`) {
 
-      for (let application of data) {
-        console.log("Application: " + application);
+    let jobsEleString = "";
+    fetch(url).then(res => res.json())
+      .then(data => {
+        console.log("DATA :" + JSON.stringify(data));
 
-        jobsEleString += `<div id="app-block-${application.email}" class="flex font-sans relative shadow-xl flex leading-none bg-white mt-4">
+        document.getElementById('total-pages').innerHTML = "Total Pages = " + data.count;
+        prev = data.previous;
+        next = data.next;
+
+        for (let application of data.results) {
+          // console.log("Application: " + application);
+
+          jobsEleString += `<div id="app-block-${application.email}" class="flex font-sans relative shadow-xl flex leading-none bg-white mt-4">
             <div class="flex-auto p-6">
               <div class="flex flex-wrap">
                 <h1 class="flex-auto text-lg font-semibold text-slate-900">
@@ -90,43 +113,54 @@
           </div>
         `;
         }
-  
-      jobsEle.innerHTML = jobsEleString;
-    });
 
-    function showApplicationDetails(email) {
-      console.log("Fetching details for: " + email);
+        jobsEle.innerHTML = jobsEleString;
+      });
+  }
 
-      const targetEl = document.getElementById("applicantDetail1Modal");
-      const modal = new Modal(targetEl);
+  getApplicants();
+
+  document.getElementById('prev-btn').onclick = function() {
+    getApplicants(prev);
+  }
+
+  document.getElementById('next-btn').onclick = function() {
+    getApplicants(next);
+  }
+
+  function showApplicationDetails(email) {
+    console.log("Fetching details for: " + email);
+
+    const targetEl = document.getElementById("applicantDetail1Modal");
+    const modal = new Modal(targetEl);
+    modal.toggle();
+
+    document.getElementById('close-app1-modal').onclick = function () {
       modal.toggle();
+    }
 
-      document.getElementById('close-app1-modal').onclick = function () {
-        modal.toggle();
-      }
-
-      fetch('/api/applicant/' + email).then(res => res.json())
+    fetch('/api/applicant/' + email).then(res => res.json())
       .then(data => {
         document.getElementById('app-detail-1').innerHTML = JSON.stringify(data, null, "\t");
       })
-    }
+  }
 
-    function changeApplicationStatus(email, status) {
-      console.log("Email: ", email, " \n Status: ", status);
+  function changeApplicationStatus(email, status) {
+    console.log("Email: ", email, " \n Status: ", status);
 
-      postData(`/api/applicant/${email}/`, { email, status }, 'PUT')
-        .then(data => {
-          console.log("Data got: ", data);
+    postData(`/api/applicant/${email}/`, { email, status }, 'PUT')
+      .then(data => {
+        console.log("Data got: ", data);
 
-          if (data.status == "Accepted" || data.status == "Rejected") {
-            const emailBlock = document.getElementById('app-block-' + email);
-            emailBlock.getElementsByClassName('accepted-true')[0].innerHTML = data.status;
-            emailBlock.getElementsByClassName('accepted-false')[0].style.display = "none";
-          } else {
-            console.log("Data Error: ", data);
-          }
-        });
-    }
+        if (data.status == "Accepted" || data.status == "Rejected") {
+          const emailBlock = document.getElementById('app-block-' + email);
+          emailBlock.getElementsByClassName('accepted-true')[0].innerHTML = data.status;
+          emailBlock.getElementsByClassName('accepted-false')[0].style.display = "none";
+        } else {
+          console.log("Data Error: ", data);
+        }
+      });
+  }
 
 </script>
 
