--- a/portal/templates/base.html
+++ b/portal/templates/base.html
@@ -39,6 +39,27 @@
     });
     return response.json(); // parses JSON response into native JavaScript objects
   }
+
+    // Example POST method implementation:
+    async function putData(url = '', formData = {}, method = 'PUT') {
+    // Default options are marked with *
+    const response = await fetch(url, {
+      method: method, // *GET, POST, PUT, DELETE, etc.
+      mode: 'cors', // no-cors, *cors, same-origin
+      cache: 'no-cache', // *default, no-cache, reload, force-cache, only-if-cached
+      credentials: 'same-origin', // include, *same-origin, omit
+      headers: {
+        'Content-Type': 'multipart/form-data',
+        'X-CSRFToken': csrfToken,
+        'Accept': 'application/json, application/xml, text/plain, text/html, *.*',
+        // 'Content-Type': 'application/x-www-form-urlencoded',
+      },
+      redirect: 'follow', // manual, *follow, error
+      referrerPolicy: 'no-referrer', // no-referrer, *no-referrer-when-downgrade, origin, origin-when-cross-origin, same-origin, strict-origin, strict-origin-when-cross-origin, unsafe-url
+      body: formData // body data type must match "Content-Type" header
+    });
+    return response.json(); // parses JSON response into native JavaScript objects
+  }
 </script>
 
 <body style="background-color: #f3f2ef;">
@@ -175,11 +196,11 @@
         </button>
         <div class="py-6 px-6 lg:px-8">
           <h3 class="mb-4 text-xl font-medium text-gray-900 dark:text-white"> Track Job Applications </h3>
-          <form class="space-y-6" action="#">
+          <form class="space-y-6" id="app-status-form1">
             <div>
               <label for="text" class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300"> Application
                 Email </label>
-              <input type="email" name="application_email" id="application_email"
+              <input type="email" name="application_email2" id="application_email2"
                 class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white"
                 placeholder="Application Email" required>
             </div>
@@ -348,6 +369,16 @@
         }).catch(err => {
           console.log("Error came: ", err);
         });
+    }
+
+    document.getElementById('app-status-form1').onsubmit = function(e) {
+      e.preventDefault();
+
+      const email = document.getElementById('application_email2').value;
+      fetch('/api/applicant/' + email).then(res => res.json())
+      .then(data => {
+        alert(JSON.stringify(data));
+      })
     }
   </script>
 
